--- a/template.classpath
+++ b/template.classpath
@@ -74,9 +74,13 @@
 	<classpathentry kind="lib" path="lib/scala-parser-combinators_2.11-1.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/scala-xml_2.11-1.0.2.jar"/>
 	<classpathentry kind="lib" path="third_party/java/jars/javassist-3.20.0-GA.jar"/>
-    <!-- zkclient is used for test only -->
+	<classpathentry kind="lib" path="lib/calcite-core-1.17.0.jar" sourcepath="lib/calcite-core-1.17.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/calcite-server-1.17.0.jar" sourcepath="lib/calcite-server-1.17.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/calcite-linq4j-1.17.0.jar" sourcepath="lib/calcite-linq4j-1.17.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/avatica-core-1.12.0.jar" sourcepath="lib/avatica-core-1.12.0-sources.jar"/>
+	<!-- zkclient is used for tests only -->
 	<classpathentry kind="lib" path="third_party/java/jars/zkclient-0.10.jar"/>
-    <!-- regular zookeeper server 3.4.10 is used for test only -->
+	<!-- regular zookeeaper server 3.4.10 is used for tests only -->
 	<classpathentry kind="lib" path="third_party/java/jars/zookeeper-3.4.10.jar"/>
 	<classpathentry kind="lib" path="third_party/java/jars/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="third_party/java/jars/httpclient-4.3.4-tests.jar"/>
